Refactor tests to use `@Autowired` dependencies and transactional database setup
- Replace Mockito mocks with `@Autowired` dependencies in test classes.
- Refactor tests to rely on transactional database with `DSLContext` for data setup and teardown.
- Exclude Mockito from test dependencies in `pom.xml` to align with new testing conventions.
- Update CLAUDE.md to explicitly disallow mocking in tests.
- Improve assertions for clarity and consistency. Use `getFirst()` for cleaner access in test collections.

Signed-off-by: Simon Martinelli <simon@martinelli.ch>